--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ select:focus {
     h2 {
         font-weight: 400;
         color: grey;
+        margin-top: 10%;
     }
 }
 
@@ -84,7 +85,7 @@ select:focus {
     margin-bottom: 3%;
     box-shadow: rgba(207, 216, 226, 0.2) 0px 8px 24px;
 
-    max-width: 15%;
+    max-width: 20%;
     background-color: white;
     border-radius: 20px;
     padding: 10px;
@@ -184,8 +185,7 @@ select:focus {
     color: black;
     border-radius: 50px;
     font-size: 1.2rem;
-    width: 5%;
-    height: 55px;
+    padding: 1.5% 2% 1.5% 2%;
     margin-top: -2%;
     margin-left: -2%;
 }
