--- a/style.css
+++ b/style.css
@@ -82,6 +82,7 @@ select:focus {
 }
 
 .recipe {
+
     margin-bottom: 3%;
     box-shadow: rgba(207, 216, 226, 0.2) 0px 8px 24px;
 
@@ -103,8 +104,9 @@ select:focus {
         font-weight: 500;
         margin-top: 7%;
         padding: 0 2% 0 2%;
-        margin-bottom: 10px;
+        margin-bottom: 5%;
         font-size: 1.2rem;
+        text-align: center;
     }
 
     button {
